# google-forms-printer

./: .gitignore  Cargo.toml  README.md  build_windows.sh
pdf/: pdf.typ
src/: cfg.rs  client.rs  main.rs  parse.rs  pdf.rs  print.rs  state.rs  util.rs
