[package]
name = "google-forms-printer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
bimap = "0.6.3"
chrono = { version = "0.4.38", features = ["serde"] }
colorize = "0.1.0"
do-notation = "0.1.3"
enable-ansi-support = "0.2.1"
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.201"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tryvial = "0.2.0"
url = "2.5.0"
winprint = { version = "0.1.0", features = ["pdfium"] }
yup-oauth2 = "9.0.0"
